@@ -31,6 +31,8 @@ COBCRUN="${abs_top_builddir}/bin/cobcrun"
 COBCRUN_DIRECT="" # used for running created executables through tools
 
 # -- BEGIN OF VALGRIND SPECIFIC PARTS ---
+
+COBCRUN_WITHOUT_VG="$COBCRUN"
 #
 # To check with valgrind:
 # * ideally: reconfigure with `./configure --enable-debug & make`
@@ -38,22 +40,44 @@ COBCRUN_DIRECT="" # used for running created executables through tools
 # * diff these parts into your atlocal (preferably creating a temporary one)
 # * set switches you need to the following lines and set the tool accordingly (template has MEMCHECK)
 # * if your system ships with valgrind suppression files (default.supp is always active) you likely
-#   want to activate --suppressions=/usr/lib/valgrind/debian.supp --suppressions=/usr/lib/valgrind/ncurses.supp
+#   want to activate at least the suppressions below (adjusted to your directory)
+# * if you stumble over (other) system library errors you likely want to suppress some of them
+#   --> re-run single tests with --gen-suppressions=yes
+#   --> inspect and modify the suppression file
+#   --> add to $VG_SUPPR below
 
-VALGRIND_COBC_LOG=${abs_builddir}/valgrind/cobc_%p.log
-VALGRIND_COBCRUN_LOG=${abs_builddir}/valgrind/cobcrun_%p.log
-VALGRIND_COBCRUN_DIRECT_LOG=${abs_builddir}/valgrind/cobcrun_direct_%p.log
+#VG_SUPPR_DIR="/usr/lib/valgrind"
+#VG_SUPPR="--suppressions=$VG_SUPPR_DIR/debian.supp --suppressions=$VG_SUPPR_DIR/ncurses.supp"
+VG_SUPPR=""
+
+# Variable part in valgrind log file name via %q (must contain something!)
+# Note: at_group contains the testsuite number in automake generated testsuites
+
+if test "x$1" != "x"; then
+	at_group="$1"            # if not empty: use first parameter from invocation
+else
+	if test "x$at_group" = "x"; then
+		at_group="valgrind"   # default:      use "valgrind"
+	fi
+fi
+export at_group
+
+VG_LOG_PREFIX="${abs_builddir}/valgrind/%q{at_group}_%p"
+
+VG_COBC_LOG="$VG_LOG_PREFIX-cobc.log"
+VG_COBCRUN_LOG="$VG_LOG_PREFIX-cobcrun.log"
+VG_COBCRUN_DIRECT_LOG="$VG_LOG_PREFIX-cobcrun_direct.log"
 
 # if you stumble over system library errors you may want to suppress some of them
 # re-run with --gen-suppressions=yes and then point to the file (after inspecting and
 # modifiying it via --suppressions=${abs_builddir}/local.supp) 
-MEMCHECK="valgrind --tool=memcheck --read-var-info=yes --track-origins=yes --leak-check=full --show-leak-kinds=all"
-SGCHECK="valgrind --tool=exp-sgcheck --read-var-info=yes"
+MEMCHECK="valgrind --tool=memcheck --read-var-info=yes --track-origins=yes --leak-check=full --show-leak-kinds=all $VG_SUPPR"
+SGCHECK="valgrind --tool=exp-sgcheck --read-var-info=yes $VG_SUPPR"
 
 # cobol85 test use environment from a new perl process --> export needed
-export COBC="libtool --mode=execute $MEMCHECK --log-file=$VALGRIND_COBC_LOG ${COBC}"
-export COBCRUN="libtool --mode=execute $MEMCHECK --log-file=$VALGRIND_COBCRUN_LOG ${COBCRUN}"
-export COBCRUN_DIRECT="$MEMCHECK --log-file=$VALGRIND_COBCRUN_DIRECT_LOG ${COBCRUN_DIRECT}"
+export COBC="libtool --mode=execute $MEMCHECK --log-file=$VG_COBC_LOG ${COBC}"
+export COBCRUN="libtool --mode=execute $MEMCHECK --log-file=$VG_COBCRUN_LOG ${COBCRUN}"
+export COBCRUN_DIRECT="$MEMCHECK --log-file=$VG_COBCRUN_DIRECT_LOG ${COBCRUN_DIRECT}"
 
 # -- END OF VALGRIND SPECIFIC PARTS ---
 
@@ -73,7 +97,7 @@ PATHSEP=":"
 UNIFY_LISTING="${abs_srcdir}/listings-sed.sh"
 
 # unset all environment variables that are used in libcob for runtime configuration
-for cobenv in $($COBCRUN --runtime-conf | grep COB_ | cut -d: -f2); do unset $cobenv; done
+for cobenv in $($COBCRUN_WITHOUT_VG --runtime-conf | grep COB_ | cut -d: -f2); do unset $cobenv; done
 
 # For running the testsuite in Cygwin with non-Cygwin binaries we need a wrapper function
 _return_path () {
@@ -96,11 +120,11 @@ export COB_LIBRARY_PATH="${abs_top_builddir}/extras:$COB_LIBRARY_PATH"
 export COB_UNIX_LF=YES
 export COB_HAS_ISAM
 if test "$MSYSTEM" = "MINGW32"; then
-   # running MSYS builds as not-visible child processes result in
-   # "Redirection is not supported"
-   COB_HAS_CURSES="no"
-   # Fix for testcases were cobc translates path to win32 equivalents
-   PATHSEP=";"
+	# running MSYS builds as not-visible child processes result in
+	# "Redirection is not supported"
+	COB_HAS_CURSES="no"
+	# Fix for testcases were cobc translates path to win32 equivalents
+	PATHSEP=";"
 fi
 export COB_HAS_CURSES
 export COB_HAS_UTC_OFFSET
