@@ -1,4 +1,9 @@
 
+2017-08-28  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
+
+	* Makefile.am: use $COBC defined in atlocal instead of "cobc";
+	  passing hints for valgrind logfile name when sourcing atlocal
+
 2017-07-20  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
 
 	* report.pl: activated runtime checks where possible to prevent
